--- a/src/components/BtnChecked/styles.css
+++ b/src/components/BtnChecked/styles.css
@@ -1,4 +1,4 @@
-label {
+.check-label {
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
@@ -7,7 +7,7 @@ label {
 	margin-left: 15px;
 }
 
-input {
+.check-input {
 	position: absolute;
 	transform: scale(0);
 	-webkit-transform: scale(0);
@@ -29,6 +29,5 @@ input {
 	border-bottom-color: #0d6efd;
 	border-right-color: #0d6efd;
 	border-radius: 0;
-	/* border-radius: 6px; */
 	transition: all 0.375s;
 }
